[package]
name = "streaming-cluster"
version = "0.1.0"
edition = "2024"


[features]
example = ["dep:rand", "dep:rand_pcg"]

[dependencies]
rand = {version = "0.9.1" , optional = true}
rand_pcg = {version = "0.9.0" , optional = true}


[dev-dependencies]
streaming-cluster = {path = "./", features = ["example"]}
criterion = {version = "0.6" }
rand = {version = "0.9.1" }
rand_pcg = {version = "0.9.0" }

[[bench]]
name = "clustering-bench"
harness = false
required-features = ["example"]
